--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,19 @@ body {
 .text-muted {
   color: #2974B3;
 }
+
+.dashboard-chart {
+  height: 325px;
+}
+
+@media(max-width: 992px) {
+  .dashboard-chart {
+    height: 250px;
+  }
+}
+
+@media(max-width: 528px) {
+  .dashboard-chart {
+    height: 150px;
+  }
+}
