--- a/client/public/bootstrap-mod.css
+++ b/client/public/bootstrap-mod.css
@@ -500,16 +500,16 @@ a.text-primary:hover {
   color: #135289;
 }
 .text-success {
-  color: #43ab7f;
+  color: #468847;
 }
 a.text-success:hover {
-  color: #348764;
+  color: #356635;
 }
 .text-info {
-  color: #1cb2d7;
+  color: #3a87ad;
 }
 a.text-info:hover {
-  color: #168caa;
+  color: #2d6987;
 }
 .text-warning {
   color: #c09853;
@@ -518,10 +518,10 @@ a.text-warning:hover {
   color: #a47e3c;
 }
 .text-danger {
-  color: #e04d69;
+  color: #b94a48;
 }
 a.text-danger:hover {
-  color: #d52547;
+  color: #953b39;
 }
 .bg-primary {
   color: #fff;
@@ -531,16 +531,16 @@ a.bg-primary:hover {
   background-color: #135289;
 }
 .bg-success {
-  background-color: #ceecdf;
+  background-color: #dff0d8;
 }
 a.bg-success:hover {
-  background-color: #a9dec8;
+  background-color: #c1e2b3;
 }
 .bg-info {
-  background-color: #c7eef8;
+  background-color: #d9edf7;
 }
 a.bg-info:hover {
-  background-color: #9ae0f2;
+  background-color: #afd9ee;
 }
 .bg-warning {
   background-color: #fcf8e3;
@@ -549,10 +549,10 @@ a.bg-warning:hover {
   background-color: #f7ecb5;
 }
 .bg-danger {
-  background-color: #f7cfd7;
+  background-color: #f2dede;
 }
 a.bg-danger:hover {
-  background-color: #efa4b2;
+  background-color: #e4b9b9;
 }
 .page-header {
   padding-bottom: 9px;
@@ -1508,13 +1508,13 @@ table th[class*="col-"] {
 .table > thead > tr.success > th,
 .table > tbody > tr.success > th,
 .table > tfoot > tr.success > th {
-  background-color: #ceecdf;
+  background-color: #dff0d8;
 }
 .table-hover > tbody > tr > td.success:hover,
 .table-hover > tbody > tr > th.success:hover,
 .table-hover > tbody > tr.success:hover > td,
 .table-hover > tbody > tr.success:hover > th {
-  background-color: #bce5d3;
+  background-color: #d0e9c6;
 }
 .table > thead > tr > td.info,
 .table > tbody > tr > td.info,
@@ -1528,13 +1528,13 @@ table th[class*="col-"] {
 .table > thead > tr.info > th,
 .table > tbody > tr.info > th,
 .table > tfoot > tr.info > th {
-  background-color: #c7eef8;
+  background-color: #d9edf7;
 }
 .table-hover > tbody > tr > td.info:hover,
 .table-hover > tbody > tr > th.info:hover,
 .table-hover > tbody > tr.info:hover > td,
 .table-hover > tbody > tr.info:hover > th {
-  background-color: #b1e7f5;
+  background-color: #c4e3f3;
 }
 .table > thead > tr > td.warning,
 .table > tbody > tr > td.warning,
@@ -1568,13 +1568,13 @@ table th[class*="col-"] {
 .table > thead > tr.danger > th,
 .table > tbody > tr.danger > th,
 .table > tfoot > tr.danger > th {
-  background-color: #f7cfd7;
+  background-color: #f2dede;
 }
 .table-hover > tbody > tr > td.danger:hover,
 .table-hover > tbody > tr > th.danger:hover,
 .table-hover > tbody > tr.danger:hover > td,
 .table-hover > tbody > tr.danger:hover > th {
-  background-color: #f3bac5;
+  background-color: #ebcccc;
 }
 @media (max-width: 767px) {
   .table-responsive {
@@ -1840,25 +1840,25 @@ select[multiple].input-lg {
 .has-success .checkbox,
 .has-success .radio-inline,
 .has-success .checkbox-inline {
-  color: #43ab7f;
+  color: #468847;
 }
 .has-success .form-control {
-  border-color: #43ab7f;
+  border-color: #468847;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .has-success .form-control:focus {
-  border-color: #348764;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #85cfb0;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #85cfb0;
+  border-color: #356635;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
 }
 .has-success .input-group-addon {
-  color: #43ab7f;
-  border-color: #43ab7f;
-  background-color: #ceecdf;
+  color: #468847;
+  border-color: #468847;
+  background-color: #dff0d8;
 }
 .has-success .form-control-feedback {
-  color: #43ab7f;
+  color: #468847;
 }
 .has-warning .help-block,
 .has-warning .control-label,
@@ -1892,25 +1892,25 @@ select[multiple].input-lg {
 .has-error .checkbox,
 .has-error .radio-inline,
 .has-error .checkbox-inline {
-  color: #e04d69;
+  color: #b94a48;
 }
 .has-error .form-control {
-  border-color: #e04d69;
+  border-color: #b94a48;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 .has-error .form-control:focus {
-  border-color: #d52547;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #efa4b2;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #efa4b2;
+  border-color: #953b39;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
 }
 .has-error .input-group-addon {
-  color: #e04d69;
-  border-color: #e04d69;
-  background-color: #f7cfd7;
+  color: #b94a48;
+  border-color: #b94a48;
+  background-color: #f2dede;
 }
 .has-error .form-control-feedback {
-  color: #e04d69;
+  color: #b94a48;
 }
 .form-control-static {
   margin-bottom: 0;
@@ -4444,26 +4444,26 @@ a.thumbnail.active {
   color: inherit;
 }
 .alert-success {
-  background-color: #ceecdf;
-  border-color: #bce5cd;
-  color: #43ab7f;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #468847;
 }
 .alert-success hr {
-  border-top-color: #a9debf;
+  border-top-color: #c9e2b3;
 }
 .alert-success .alert-link {
-  color: #348764;
+  color: #356635;
 }
 .alert-info {
-  background-color: #c7eef8;
-  border-color: #a8f1f4;
-  color: #1cb2d7;
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+  color: #3a87ad;
 }
 .alert-info hr {
-  border-top-color: #91eef1;
+  border-top-color: #a6e1ec;
 }
 .alert-info .alert-link {
-  color: #168caa;
+  color: #2d6987;
 }
 .alert-warning {
   background-color: #fcf8e3;
@@ -4477,15 +4477,15 @@ a.thumbnail.active {
   color: #a47e3c;
 }
 .alert-danger {
-  background-color: #f7cfd7;
-  border-color: #f4c2d4;
-  color: #e04d69;
+  background-color: #f2dede;
+  border-color: #eed3d7;
+  color: #b94a48;
 }
 .alert-danger hr {
-  border-top-color: #f1adc5;
+  border-top-color: #e6c1c7;
 }
 .alert-danger .alert-link {
-  color: #d52547;
+  color: #953b39;
 }
 @-webkit-keyframes progress-bar-stripes {
   from {
@@ -4648,48 +4648,48 @@ a.list-group-item.active:focus .list-group-item-text {
   color: #a8d0f3;
 }
 .list-group-item-success {
-  color: #43ab7f;
-  background-color: #ceecdf;
+  color: #468847;
+  background-color: #dff0d8;
 }
 a.list-group-item-success {
-  color: #43ab7f;
+  color: #468847;
 }
 a.list-group-item-success .list-group-item-heading {
   color: inherit;
 }
 a.list-group-item-success:hover,
 a.list-group-item-success:focus {
-  color: #43ab7f;
-  background-color: #bce5d3;
+  color: #468847;
+  background-color: #d0e9c6;
 }
 a.list-group-item-success.active,
 a.list-group-item-success.active:hover,
 a.list-group-item-success.active:focus {
   color: #fff;
-  background-color: #43ab7f;
-  border-color: #43ab7f;
+  background-color: #468847;
+  border-color: #468847;
 }
 .list-group-item-info {
-  color: #1cb2d7;
-  background-color: #c7eef8;
+  color: #3a87ad;
+  background-color: #d9edf7;
 }
 a.list-group-item-info {
-  color: #1cb2d7;
+  color: #3a87ad;
 }
 a.list-group-item-info .list-group-item-heading {
   color: inherit;
 }
 a.list-group-item-info:hover,
 a.list-group-item-info:focus {
-  color: #1cb2d7;
-  background-color: #b1e7f5;
+  color: #3a87ad;
+  background-color: #c4e3f3;
 }
 a.list-group-item-info.active,
 a.list-group-item-info.active:hover,
 a.list-group-item-info.active:focus {
   color: #fff;
-  background-color: #1cb2d7;
-  border-color: #1cb2d7;
+  background-color: #3a87ad;
+  border-color: #3a87ad;
 }
 .list-group-item-warning {
   color: #c09853;
@@ -4714,26 +4714,26 @@ a.list-group-item-warning.active:focus {
   border-color: #c09853;
 }
 .list-group-item-danger {
-  color: #e04d69;
-  background-color: #f7cfd7;
+  color: #b94a48;
+  background-color: #f2dede;
 }
 a.list-group-item-danger {
-  color: #e04d69;
+  color: #b94a48;
 }
 a.list-group-item-danger .list-group-item-heading {
   color: inherit;
 }
 a.list-group-item-danger:hover,
 a.list-group-item-danger:focus {
-  color: #e04d69;
-  background-color: #f3bac5;
+  color: #b94a48;
+  background-color: #ebcccc;
 }
 a.list-group-item-danger.active,
 a.list-group-item-danger.active:hover,
 a.list-group-item-danger.active:focus {
   color: #fff;
-  background-color: #e04d69;
-  border-color: #e04d69;
+  background-color: #b94a48;
+  border-color: #b94a48;
 }
 .list-group-item-heading {
   margin-top: 0;
@@ -4963,32 +4963,32 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #196db6;
 }
 .panel-success {
-  border-color: #bce5cd;
+  border-color: #d6e9c6;
 }
 .panel-success > .panel-heading {
-  color: #43ab7f;
-  background-color: #ceecdf;
-  border-color: #bce5cd;
+  color: #468847;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
 }
 .panel-success > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #bce5cd;
+  border-top-color: #d6e9c6;
 }
 .panel-success > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #bce5cd;
+  border-bottom-color: #d6e9c6;
 }
 .panel-info {
-  border-color: #a8f1f4;
+  border-color: #bce8f1;
 }
 .panel-info > .panel-heading {
-  color: #1cb2d7;
-  background-color: #c7eef8;
-  border-color: #a8f1f4;
+  color: #3a87ad;
+  background-color: #d9edf7;
+  border-color: #bce8f1;
 }
 .panel-info > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #a8f1f4;
+  border-top-color: #bce8f1;
 }
 .panel-info > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #a8f1f4;
+  border-bottom-color: #bce8f1;
 }
 .panel-warning {
   border-color: #fbeed5;
@@ -5005,18 +5005,18 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #fbeed5;
 }
 .panel-danger {
-  border-color: #f4c2d4;
+  border-color: #eed3d7;
 }
 .panel-danger > .panel-heading {
-  color: #e04d69;
-  background-color: #f7cfd7;
-  border-color: #f4c2d4;
+  color: #b94a48;
+  background-color: #f2dede;
+  border-color: #eed3d7;
 }
 .panel-danger > .panel-heading + .panel-collapse .panel-body {
-  border-top-color: #f4c2d4;
+  border-top-color: #eed3d7;
 }
 .panel-danger > .panel-footer + .panel-collapse .panel-body {
-  border-bottom-color: #f4c2d4;
+  border-bottom-color: #eed3d7;
 }
 .well {
   min-height: 20px;
@@ -5766,4 +5766,3 @@ button.close {
     display: none !important;
   }
 }
-   
