--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,3 +36,21 @@
     height: 150px;
   }
 }
+
+.panel-login .panel-body {
+  padding: 30px;
+}
+
+.panel-login h3 {
+  margin-top: 0px;
+}
+
+.panel-login {
+  margin-top: 50px;
+}
+
+@media(max-width: 768px) {
+  .panel-login {
+    margin-top: 0px;
+  }
+}
