--- a/client/public/index.css
+++ b/client/public/index.css
@@ -68,3 +68,24 @@
 .page-heading {
   margin-bottom: 30px;
 }
+
+.yaxis {
+  height: 325px;
+  text-align: center;
+  position: absolute;
+  left: 20px;
+  writing-mode:tb-rl;
+  -webkit-transform:rotate(180deg);
+  -moz-transform:rotate(180deg);
+  -o-transform: rotate(180deg);
+  -ms-transform:rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.panel-chart {
+  position: relative;
+}
+
+.panel-chart .panel-title {
+  text-align: center;
+}
