--- a/client/public/index.css
+++ b/client/public/index.css
@@ -82,6 +82,18 @@
   transform: rotate(180deg);
 }
 
+@media(max-width: 992px) {
+  .yaxis {
+    height: 250px;
+  }
+}
+
+@media(max-width: 528px) {
+  .yaxis {
+    height: 150px;
+  }
+}
+
 .panel-chart {
   position: relative;
 }
