--- a/client/public/index.css
+++ b/client/public/index.css
@@ -2,24 +2,9 @@
   font-family: 'Lato', sans-serif;
 }
 
-/*body {
-  background-color: #D2EBFD;
+.navbar {
+  background-color: #ebf5ed;
 }
-
-.jumbotron {
-  background: linear-gradient(to bottom, #41A5EA 0%, #2974B3 100%);
-  color: #EDF2F7;
-}
-
-.btn {
-  background-color: #EDF2F7;
-  color: #2974B3;
-  border-color: #2974B3;
-}
-
-.text-muted {
-  color: #2974B3;
-}*/
 
 .dashboard-chart {
   height: 325px;
@@ -105,6 +90,10 @@
 .panel-chart .panel-title {
   text-align: center;
   font-size: 20px;
+}
+
+.panel .panel-heading {
+  background-color: #ebf5ed;
 }
 
 .splash-hero {
